[package]
name = "retry_async"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "A library for retrying."
repository = "https://github.com/third-act/retry_async/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = "0.2.2"
futures = "0.3.21"
rand = "0.8.5"